# 3MF-IO

./: .gitignore  README.md  pyproject.toml
src/: auto_load.py  blender_manifest.toml  operators.py
